--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^4.6.2",
     "jquery": "^3.7.1",
+    "ngx-bootstrap": "^4.3.0",
+    "ngx-owl-carousel-o": "^14.0.2",
     "popper": "^1.0.1",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
