--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.6.2",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^4.3.0",
+    "ngx-infinite-scroll": "^10.0.1",
     "ngx-owl-carousel-o": "^14.0.2",
     "popper": "^1.0.1",
     "rxjs": "~7.5.0",
